--- a/homework10/src/main/AndroidManifest.xml
+++ b/homework10/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ru.academy.homework10">
 
 <!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -10,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:permission="android.permission.WRITE_EXTERNAL_STORAGE"
         android:theme="@style/AppTheme">
         <service
             android:name=".ServiceExample"
